# Bubo

./: .gitignore  CMakeLists.txt  LICENSE
include/core/: Application.h  Assert.h  Config.h  Input.h  Logger.h  Window.h
include/events/: Event.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
include/model/: Mesh.h
include/renderer/: Camera.h  Framebuffer.h  IndexBufferObject.h  Material.h  Renderer.h  Shader.h  Texture.h  VertexArrayObject.h  VertexBufferObject.h
include/scene/: Lights.h  Mesh.h  ModelLoader.h  Scene.h  Skybox.h
lib/glad/: CMakeLists.txt
lib/glad/include/KHR/: khrplatform.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
res/shaders/: fragment.shader  framebuffer_fragment.shader  framebuffer_vertex.shader  posterization_fragment.shader  skybox_fragment.shader  skybox_vertex.shader  teapot_fragment.shader  vertex.shader
src/: CMakeLists.txt  Main.cpp
src/core/: Application.cpp  Input.cpp  Logger.cpp  Window.cpp
src/model/: Mesh.cpp
src/renderer/: Camera.cpp  Framebuffer.cpp  IndexBufferObject.cpp  Material.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VertexArrayObject.cpp  VertexBufferObject.cpp
src/scene/: Lights.cpp  Mesh.cpp  ModelLoader.cpp  Scene.cpp  Skybox.cpp
